# dataset-MarylandPolyvore

./: .env.example  .gitignore  MarylandPolyvore.ipynb  Pipfile  README.md  copy_images_to_tiny.sh  make_poly_cr.py  make_poly_cr_fitb.py  make_tiny.py  pyproject.toml  requirements.txt
label/: category2categorytype.tsv  categorytype.tsv
main/labels/: category_id.tsv  categorytype_order_main.txt
notebooks/: MarylandPolyvore.ipynb  main_category.ipynb
